<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        app:cardCornerRadius="20dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.2" />

                <TextView
                    android:id="@+id/tvTituloEgreso"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@color/purple_500"
                    android:gravity="center"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:text="@string/bienvenida"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tiPrecio"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:boxCornerRadiusBottomEnd="18dp"
                    app:boxCornerRadiusBottomStart="18dp"
                    app:boxCornerRadiusTopEnd="18dp"
                    app:boxCornerRadiusTopStart="18dp"
                    app:counterEnabled="true"
                    app:counterMaxLength="-3"
                    app:layout_constraintBottom_toTopOf="@+id/guideline15"
                    app:layout_constraintEnd_toStartOf="@+id/guideline12"
                    app:layout_constraintStart_toStartOf="@+id/guideline14"
                    app:layout_constraintTop_toTopOf="@+id/guideline7"
                    app:startIconDrawable="@drawable/ic_monetization">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/EtPrecio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:hint="@string/precio_insuno"
                        tools:ignore="TouchTargetSizeCheck" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tiFecha"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:boxCornerRadiusBottomEnd="18dp"
                    app:boxCornerRadiusBottomStart="18dp"
                    app:boxCornerRadiusTopEnd="18dp"
                    app:boxCornerRadiusTopStart="18dp"
                    app:layout_constraintBottom_toTopOf="@+id/guideline16"
                    app:layout_constraintEnd_toStartOf="@+id/guideline12"
                    app:layout_constraintStart_toStartOf="@+id/guideline14"
                    app:layout_constraintTop_toTopOf="@+id/guideline15"
                    app:startIconDrawable="@drawable/ic_date"
                    app:counterEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/EtFecha"
                        android:focusable="false"
                        android:clickable="false"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:hint="@string/fecha_insuno"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilDescripcion"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:boxCornerRadiusBottomEnd="18dp"
                    app:boxCornerRadiusBottomStart="18dp"
                    app:boxCornerRadiusTopEnd="18dp"
                    app:boxCornerRadiusTopStart="18dp"
                    app:layout_constraintBottom_toTopOf="@+id/guideline17"
                    app:layout_constraintEnd_toStartOf="@+id/guideline12"
                    app:layout_constraintStart_toStartOf="@+id/guideline14"
                    app:layout_constraintTop_toTopOf="@+id/guideline16"
                    app:startIconDrawable="@drawable/ic_headline"
                    app:counterEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/EtDescripcion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionGo"
                        android:inputType="textCapSentences"
                        android:maxLines="1"
                        android:hint="@string/descripcion_insuno"/>
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/BtInsertar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/boton_agregar"
                    android:text="@string/guardar"
                    android:textStyle="bold"
                    app:backgroundTint="@null"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/guideline12"
                    app:layout_constraintStart_toStartOf="@+id/guideline14"
                    app:layout_constraintTop_toTopOf="@+id/guideline17" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.95" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.05" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.4" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.6" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline17"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.8" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            </ScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>