<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/alertDatos">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        app:cardCornerRadius="20dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginBottom="8dp"
                        android:background="@color/purple_500"
                        android:gravity="center"
                        android:text="@string/bienvenida"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toTopOf="@+id/guideline2"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintGuide_percent="0.20109439" />

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_marginBottom="8dp"
                        app:boxCornerRadiusBottomEnd="18dp"
                        app:boxCornerRadiusBottomStart="18dp"
                        app:boxCornerRadiusTopEnd="18dp"
                        app:boxCornerRadiusTopStart="18dp"
                        app:layout_constraintBottom_toTopOf="@+id/guideline3"
                        app:layout_constraintEnd_toStartOf="@+id/guideline9"
                        app:layout_constraintStart_toStartOf="@+id/guideline8"
                        app:layout_constraintTop_toTopOf="@+id/guideline2"
                        app:startIconDrawable="@drawable/ic_person">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/EtPropietario"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/propietario"
                            android:inputType="text"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_marginBottom="8dp"
                        app:boxCornerRadiusBottomEnd="18dp"
                        app:boxCornerRadiusBottomStart="18dp"
                        app:boxCornerRadiusTopEnd="18dp"
                        app:boxCornerRadiusTopStart="18dp"
                        app:layout_constraintBottom_toTopOf="@+id/guideline5"
                        app:layout_constraintEnd_toStartOf="@+id/guideline9"
                        app:layout_constraintStart_toStartOf="@+id/guideline8"
                        app:layout_constraintTop_toTopOf="@+id/guideline3"
                        app:startIconDrawable="@drawable/ic_home">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/EtFinca"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/finca"
                            android:inputType="text"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_marginBottom="8dp"
                        app:boxCornerRadiusBottomEnd="18dp"
                        app:boxCornerRadiusBottomStart="18dp"
                        app:boxCornerRadiusTopEnd="18dp"
                        app:boxCornerRadiusTopStart="18dp"
                        app:layout_constraintBottom_toTopOf="@+id/guideline6"
                        app:layout_constraintEnd_toStartOf="@+id/guideline9"
                        app:layout_constraintStart_toStartOf="@+id/guideline8"
                        app:layout_constraintTop_toTopOf="@+id/guideline5"
                        app:startIconDrawable="@drawable/ic_password">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/EtClave"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/clave"
                            android:inputType="number"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintGuide_percent="0.4" />

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintGuide_percent="0.6" />

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintGuide_percent="0.8" />

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_percent="0.15" />

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_percent="0.86" />

                    <Button
                        android:id="@+id/BtGuardar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/guardar"
                        android:background="@drawable/boton_agregar"
                        android:textStyle="bold"
                        app:backgroundTint="@null"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/guideline9"
                        app:layout_constraintStart_toStartOf="@+id/guideline8"
                        app:layout_constraintTop_toTopOf="@+id/guideline6" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </ScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>